tests/rt/neg/ifc/pinipushto_leak.trp
(* Demonstrates information leak through pinipushto.
 * With secret=true, adv() succeeds. Changing to false makes it fail,
 * proving that secret information (at bobL) leaks through the blocking level
 * without requiring Bob's authority.
 *)
let val botL   = `<#null-confidentiality; #root-integrity>`
    val aliceL = `<alice; #root-integrity>`
    val bobL   = `<bob; #root-integrity>`

    val secret = true raisedTo bobL

    val target = if secret then botL else aliceL
    val target = downgradeType (target, authority, botL)

    val aliceAuth = attenuate (authority, aliceL)
    val cap = pinipushto (aliceAuth, target)
    val _ = pinipop cap

    val x = 42 raisedTo aliceL
    val _ = x + 0

    val _ = blockdeclto (aliceAuth, botL)
in adv ()
end
